started adding the footer and fixed meta tags

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hjfallen.github.io/Sunya/">
     <meta property="og:title" content="Sunya">
-    <meta property="og:description" content="https://hjfallen.github.io/Sunya/assets/metaImage.jpg">
-    <meta property="og:image" content="summary_large_image">
+    <meta property="og:description" content="The Best and Freshest Mexican Finger-food">
+    <meta property="og:image" content="https://hjfallen.github.io/Sunya/">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -218,6 +218,25 @@
         </div>
       </section>
     </main>
+    <footer class="footer text-light">
+      <div class="container">
+        <div class="col mx-auto">
+            <div class="col text-center order-1"><img src="./assets/logo.png" alt=""></div>
+              <div class="col footerLinks text-center px-md-5 order-2">
+                <div class="row justify-content-center">
+                  <ul class="list-group list-group-horizontal-sm">
+                      <a href="#"><li class="list-group-item border-0 group-item-action bg-transparent">Home</li></a>
+                      <a href="staff.html"><li class="list-group-item border-0 group-item-action bg-transparent">Products</li></a>
+                      <a href="contact.html"><li class="list-group-item border-0 group-item-action bg-transparent">About us</li></a>
+                      <a href="apply.html"><li class="list-group-item border-0 group-item-action bg-transparent">Blog</li></a>
+                      <a href="apply.html"><li class="list-group-item border-0 group-item-action bg-transparent">Follow us!</li></a>
+                  </ul>
+                </div>
+                <a href="https://yourdevelopment.net/"><p class="text-center">Coded by HJFallen <br>Designed by BroozeC</p></a>
+          </div>
+        </div>
+      </div>
+    </footer>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
