Changed styling for the blog posts

--- a/index.html
+++ b/index.html
@@ -153,26 +153,24 @@
           <div class="col-md-9 col-12 mx-md-auto blog-text">
             <p class="blog-mainText">Blog</p>
             <div class="blog-postsContainer container-fluid">
-              <a href="">
-                <div class="blog-mainPost row">
-                  <div class="col-12">
-                    <div class="card">
-                      <div class="card-horizontal">
-                        <div class="img-square-wrapper">
-                          <img src="./assets/images/Blog/natasha-bhogal-7sStoaxfJh0-unsplash.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                          <div class="card-title">
-                            <h4>Lorem Ipsum</h4>
-                            <h6 class="card-subtitle">dolor sit amet</h6>
-                          </div>
-                          <p class="card-text text-muted">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero</p>
-                        </div>
+              <div class="blog-mainPost row">
+                <div class="col-12">
+                  <div class="card">
+                    <div class="card-horizontal">
+                      <div class="img-square-wrapper">
+                        <img src="./assets/images/Blog/natasha-bhogal-7sStoaxfJh0-unsplash.jpg" alt="">
+                      </div>
+                      <div class="card-body">
+                        <a href="" class="card-title">
+                          <h4>Lorem Ipsum</h4>
+                          <h6 class="card-subtitle">dolor sit amet</h6>
+                        </a>
+                        <p class="card-text text-muted">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero</p>
                       </div>
                     </div>
                   </div>
                 </div>
-              </a>
+              </div>
               <div class="blog-otherPosts container-fluid mx-md-auto m-0">
                 <div class="row">
                   <div class="d-flex justify-content-between">
