--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Guntur&family=Raleway:wght@500&family=Viga&display=swap" rel="stylesheet">
 </head>
-  <body>
+  <body id="body">
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
-        <a class="navbar-brand" href="#landing"><img src="./assets/logo.png" alt=""></a>
+        <a class="navbar-brand"><img src="./assets/logo.png" alt="" href="#body"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#landing">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#body">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#products">Products</a>
             <a class="nav-item nav-link" href="#aboutUs">About us</a>
             <a class="nav-item nav-link" href="#blog">Blog</a>
-            <a class="nav-item nav-link btn btn-primary text-light navbar-btn" href="">Follow us!</a>
+            <a class="nav-item nav-link btn btn-primary text-light followUs-btn">Follow us!</a>
         </div>
         </div>
     </nav>
@@ -62,7 +62,7 @@
           <h4 class="products-header">Products</h4>
           <div class="container-fluid">
             <div class="row d-flex justify-content-between">
-              <div class="product col-12 col-md-4">
+              <div class="product col-6 col-md-4">
                 <div class="card product-card">
                   <a name="buyNow" id="buyNow" class="btn btn-primary buyNowbtn" href="" role="button">Order now</a>
                   <img class="card-img-top" src="./assets/images/Products/emily-simenauer-IlAPq27FxZ0-unsplash.jpg" alt="">
@@ -74,7 +74,7 @@
                   </div>
                 </div>
               </div>
-              <div class="product col-12 col-md-4">
+              <div class="product col-6 col-md-4">
                 <div class="card product-card">
                   <a name="buyNow" id="buyNow" class="btn btn-primary buyNowbtn" href="" role="button">Order now</a>
                   <img class="card-img-top" src="./assets/images/Products/amber-engle-hAFCfzaeVJg-unsplash.jpg" alt="">
@@ -86,7 +86,7 @@
                   </div>
                 </div>
               </div>
-              <div class="product col-12 col-md-4">
+              <div class="product col-6 col-md-4">
                 <div class="card product-card">
                   <a name="buyNow" id="buyNow" class="btn btn-primary buyNowbtn" href="" role="button">Order now</a>
                   <img class="card-img-top" src="./assets/images/Products/t-kaiser-YWQs5YciRX4-unsplash.jpg" alt="">
@@ -98,7 +98,7 @@
                   </div>
                 </div>
               </div>
-              <div class="product col-12 col-md-4">
+              <div class="product col-6 col-md-4">
                 <div class="card product-card">
                   <a name="buyNow" id="buyNow" class="btn btn-primary buyNowbtn" href="" role="button">Order now</a>
                   <img class="card-img-top" src="./assets/images/Products/amber-engle-hAFCfzaeVJg-unsplash.jpg" alt="">
@@ -110,7 +110,7 @@
                   </div>
                 </div>
               </div>
-              <div class="product col-12 col-md-4">
+              <div class="product col-6 col-md-4">
                 <div class="card product-card">
                   <a name="buyNow" id="buyNow" class="btn btn-primary buyNowbtn" href="" role="button">Order now</a>
                   <img class="card-img-top" src="./assets/images/Products/t-kaiser-YWQs5YciRX4-unsplash.jpg" alt="">
@@ -122,7 +122,7 @@
                   </div>
                 </div>
               </div>
-              <div class="product col-12 col-md-4">
+              <div class="product col-6 col-md-4">
                 <div class="card product-card">
                   <a name="buyNow" id="buyNow" class="btn btn-primary buyNowbtn" href="" role="button">Order now</a>
                   <img class="card-img-top" src="./assets/images/Products/amber-engle-hAFCfzaeVJg-unsplash.jpg" alt="">
@@ -175,7 +175,7 @@
               <div class="blog-otherPosts container-fluid mx-md-auto m-0">
                 <div class="row">
                   <div class="d-flex justify-content-between">
-                    <a href="">
+                    <a href="#blog">
                       <div class="col-12">
                         <div class="blog-otherPost card bg-transparent border-0">
                           <img class="card-img-top" src="./assets/images/Blog/randy-fath-otQ6orzFTlk-unsplash.jpg" alt="" srcset="">
@@ -186,7 +186,7 @@
                         </div>
                       </div>
                     </a>
-                    <a href="" target="_blank" rel="noopener noreferrer">
+                    <a href="#blog">
                       <div class="col-12">
                         <div class="blog-otherPost card bg-transparent border-0">
                           <img class="card-img-top" src="./assets/images/Blog/randy-fath-otQ6orzFTlk-unsplash.jpg" alt="" srcset="">
@@ -197,7 +197,7 @@
                         </div>
                       </div>
                     </a>
-                    <a href="">
+                    <a href="#blog">
                       <div class="col-12">
                         <div class="blog-otherPost card bg-transparent border-0">
                           <img class="card-img-top" src="./assets/images/Blog/randy-fath-otQ6orzFTlk-unsplash.jpg" alt="" srcset="">
@@ -221,32 +221,30 @@
       <div class="footer-container">
         <div class="container-fluid">
           <div class="row">
-            <div class="footer-header col-3">
-              <img src="./assets/logo.png" alt="" srcset="">
+            <div class="footer-header col-md-3 col-12">
+              <a href="#body"><img src="./assets/logo.png" alt="" srcset=""></a>
             </div>
-            <div class="footer-links col-9">
+            <div class="footer-links col-md-9 col-12">
               <div class="row">
-                <div class="col-6">
+                <div class="col-md-8">
                   <div class="row">
-                    <a class="col-6">Home</a>
-                    <a class="col-6">Products</a>
-                  </div>
-                  <div class="row">
-                    <a class="col-6">About us</a>
-                    <a class="col-6">Blog</a>
+                    <a href="#body" class="col-md-6">Home</a>
+                    <a href="#products" class="col-md-6">Products</a>
+                    <div class="w-100"></div>
+                    <a href="#aboutUs" class="col-md-6">About us</a>
+                    <a href="#blog" class="col-md-6">Blog</a>
                   </div>
                 </div>
-                <div class="col-4">
-                  <div class="d-flex justify-content-end my-auto">
-                    <a name="" id="" class="btn btn-primary my-auto" href="#" role="button">Follow us!</a>
+                <div class="col-md-4 col-12">
+                  <div class="d-flex">
+                    <a name="" id="" class="btn btn-primary followUs-btn footer-followUs-btn" role="button">Follow us!</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="row">
-            <p class="col-6">Designed by Brooze</p>
-            <p class="col-6">Developed by Fallen</p> 
+          <div class="row footer-credits">
+            <p class="col-12">Designed by Brooze | Developed by Fallen</p>
           </div>
         </div>
       </div>
