--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             </div>
           </div>
           <div class="row footer-credits">
-            <p class="col-12">Designed by Brooze | Developed by Fallen</p>
+            <p class="col-12">Designed by <a href="https://twitter.com/BroozeC">Brooze</a> | Developed by <a href="https://github.com/HJFallen">Fallen</a></p>
           </div>
         </div>
       </div>
